# happikid

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--HappiKid-After-School-Programs-Schema-Seed--1761834304285_1761834304286.txt  Pasted--HappiKid-After-School-Programs-Schema-Seed--1761835057210_1761835057211.txt  Pasted--QUICK-ACCESS-BAR-Paste-under-Hero-div-className-w-full_1765422955708.txt  Pasted--THE-ECOSYSTEM-GRID-SECTION-section-className-w-full-bg_1765423714631.txt  Pasted--THE-QUICK-ACCESS-BAR-Place-this-directly-under-your-He_1765417706025.txt  Pasted--app-api-taxonomy-route-ts-import-NextResponse-from-next-server-import-Pool-from-pg--1761835663676_1761835663677.txt  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server-index-ts-8-04-49-PM-express-serving-o-1752177943422_1752177943422.txt  Pasted--section-className-relative-w-full-bg-brand-sage-px-6-p_1765413005348.txt  Pasted-Absolutely-great-idea-I-ll-give-you-a-single-copy-paste-Replit-build-prompt-that-1-downloads-1756249366820_1756249366821.txt  Pasted-Absolutely-yes-That-page-is-a-statewide-directory-of-Summer-Youth-Camps-with-county-sections-an-1756251784041_1756251784043.txt  Pasted-Awesome-here-s-a-single-copy-paste-Replit-AI-build-prompt-that-will-guide-it-to-scaffold-the-fu-1756132163936_1756132163940.txt  Pasted-For-HappiKid-you-ll-want-to-draw-design-inspiration-from-startups-that-have-nailed-trust-ease-of-u-1755712133648_1755712133652.txt  nj_childcare_centers_2025_1756250414733.xlsx  (+14 more)
camps_ingest/: README.md  (+9 more)
(+96 files in other folders)
